# Karteikarten-generator

./: .gitignore  README.md  pyproject.toml
config/: config.toml
config/.chache_files/: trasformation_cache.toml
runs/train/yolo_split_run/: args.yaml  results.csv
runs/train/yolo_split_run2/: args.yaml
runs/train/yolo_split_run3/: args.yaml  results.csv
runs/train/yolo_split_run4/: args.yaml  results.csv
runs/train/yolo_split_run5/: args.yaml  results.csv
src/: main.py  test.py
src/detection_ai/: prep_dataset.py  run.py  train.py
src/gemini_detection/: detect.py  visualize.py
src/util/: config_reader.py  image_chunker.py  ollama_checker.py  pdf_helper.py
