[project]
name = "karteikarten-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "detectron2",
    "layoutparser[layoutmodels,ocr]>=0.3.4",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pygame>=2.6.1",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
